Fix progress bar transform on mobile

--- a/docs/styles/mobile.css
+++ b/docs/styles/mobile.css
@@ -37,6 +37,7 @@
     .queue-progress {
         margin-left: calc((100vw - var(--video-width))/2);
         width: var(--video-width);
+        transform: translateY(1.5px);
     }
     .next-preview-container {
         display: none;
